# geminiAILearnAssist

./: .gitignore  README.md  ai_service.py  analytics.py  app.py  auth.py  curriculum.py  dashboard.py  google_auth.py  main.py  models.py  notifications.py  pyproject.toml  quiz.py  replit.nix  requirements.txt  student.py
static/css/: custom.css
static/js/: analytics.js  dashboard.js  main.js
templates/: base.html
templates/analytics/: index.html
templates/auth/: login.html  register.html
templates/curriculum/: create.html  list.html  view.html
templates/dashboard/: index.html
templates/quiz/: create.html  results.html  take.html
templates/student/: create.html  list.html  view.html
