[project]
name = "repl-nix-geminieduassist"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.52.2",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "google-generativeai>=0.8.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.0.6",
    "flask-socketio>=5.4.1",
    "eventlet>=0.37.0",
    "pandas>=2.2.3",
]
